--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         function setup() {
             let canvas = createCanvas(800, 800);
             canvas.parent('canvasContainer');
-            noLoop(); // Desenează o singură dată
+            noLoop(); 
         }
 
         function draw() {
-            background(255); // Fundal alb
-            drawBoxes(7, 4); // 7 coloane și 4 rânduri
+            background(255); 
+            drawBoxes(7, 4); 
         }
 
         function drawBoxes(cols, rows) {
@@ -40,8 +40,8 @@
 
             for (let i = 0; i < cols; i++) {
                 for (let j = 0; j < rows; j++) {
-                    fill(random(255), random(255), random(255)); // Culoare aleatoare
-                    stroke(0); // Contur negru
+                    fill(random(255), random(255), random(255)); 
+                    stroke(0); 
                     rect(i * boxWidth, j * boxHeight, boxWidth, boxHeight);
                 }
             }
